--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -83,8 +83,50 @@ body::-webkit-scrollbar-thumb {
   }
 }
 /* swiper */
+.custom-swiper-button-next,
+.custom-swiper-button-prev {
+  width: 35px;
+  height: 35px;
+  background-color: white;
+  border-radius: 50%;
+  border: rgb(156, 37, 160, 80%);
+  border-width: 1px;
+  border-style: solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  cursor: pointer;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
 
-.swiper-button-prev:after,
+/* Move the buttons outside the parent’s padding */
+.custom-swiper-button-next {
+  right: -20px; /* Move further right */
+}
+
+.custom-swiper-button-prev {
+  left: -20px; /* Move further left */
+}
+
+.custom-swiper-button-next::after,
+.custom-swiper-button-prev::after {
+  font-size: 25px;
+  color: rgb(156, 37, 160, 80%);
+}
+
+.custom-swiper-button-next::after {
+  content: "\1F852"; /* Unicode arrow */
+}
+
+.custom-swiper-button-prev::after {
+  content: "\1F850"; /* Unicode arrow */
+}
+
+/* .swiper-button-prev:after,
 .swiper-button-next:after {
   font-family: swiper-icons;
   font-size: 30px;
@@ -93,7 +135,7 @@ body::-webkit-scrollbar-thumb {
   line-height: 1;
   text-transform: none !important;
   color: rgb(156, 37, 160, 50%);
-}
+} */
 .swiper-pagination-bullet {
   width: 8px !important;
   height: 8px !important;
